<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/padded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="18sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uri_text"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/master_chooser_uri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:hint="@string/master_uri_hint"
            android:singleLine="true">

            <requestFocus/>
        </EditText>
    </LinearLayout>

    <LinearLayout
        style="@style/padded"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/master_chooser_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="okButtonClicked"
            android:text="@string/use_master"/>

        <Button
            android:id="@+id/master_chooser_qr_code_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="qrCodeButtonClicked"
            android:text="@string/qr_code"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/advanced_checkBox"
        style="@style/padded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="advancedCheckboxClicked"
        android:text="@string/show_advanced"
        android:layout_marginTop="30dp"
        android:visibility="visible" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/advancedOptions"
        android:layout_marginBottom="18sp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/select_interface"
            android:id="@+id/interfaceLabel"
            android:layout_gravity="center"
            android:autoText="true"
            android:visibility="gone" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/networkInterfaces"
            android:layout_weight="1"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <Button
                android:id="@+id/master_chooser_new_master_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="newMasterButtonClicked"
                android:text="@string/new_master"
                android:layout_weight="1"
                android:visibility="visible"/>

            <Button
                android:id="@+id/master_chooser_new_private_master_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="newPrivateMasterButtonClicked"
                android:text="@string/new_private_master"
                android:layout_weight="1"
                android:visibility="visible"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_names_label"
            android:id="@+id/topic_names"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="70">

                <TextView
                    android:id="@+id/image_label"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/image_text"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/image_data_label"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/image_data_text"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/move_label"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/move_text"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="30">

                <EditText
                    android:id="@+id/image_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/image_hint"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/image_data_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/image_data_hint"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/move_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/move_hint"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/master_chooser_cancel"
        style="@style/padded"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="cancelButtonClicked"
        android:text="@string/cancel"
        android:visibility="gone" />

</LinearLayout>
